<resources>
    <string name="app_name">The All Swap</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title_activity_user_edit_inventory">User Edit Inventory Activity</string>
    <string name="title_activity_user_trading">User Trading Activity</string>
    <string name="welcome">Welcome to the AllSwap</string>
    <string name="b_temp">Enter</string>
    <string name="title_activity_user_login">User Login</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="user_name">Username:</string>
    <string name="user_name_hint">your user name</string>
    <string name="user_password">Password:</string>
    <string name="user_password_hit">your password</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="title_activity_user_register">Register User</string>
    <string name="title_activity_user_main_viewing">Main Menu</string>
    <string name="my_inventory">My Inventory</string>
    <string name="my_trade">Trade Hub</string>
    <string name="my_friends">Friends</string>
    <string name="my_profile">My Profile</string>
    <string name="search">Find Items</string>
    <string name="previous_browse">Previous Browse</string>
    <string name="dash_line">-----------------------------------------------</string>
    <string name="title_activity_user_inventory">My Inventory</string>
    <string name="title_activity_user_trade">My Trade</string>
    <string name="title_activity_user_friends">My Friends</string>
    <string name="title_activity_user_profile">My Profile</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_previous_browsed_trade">Previous Browsed Trade</string>
    <string name="add_item">Add Item</string>
    <string name="add_to_friends">Add To Friends</string>
    <string name="title_activity_add_inventory_item">Add Inventory Item</string>
    <string name="new_item_quantity">Item Quantity</string>
    <string name="new_item_name">Item Name</string>
    <string name="new_item_quality">Item Quality</string>
    <string name="new_item_category">Item Category</string>
    <string name="new_item_privacy">Is current item a private item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="new_item_comment">Item Comment:</string>
    <string name="title_activity_single_friend_profile">Friend\'s Profile</string>
    <string name="user_contact_information">User Contact Information:</string>
    <string name="user_city">User City:</string>
    <string name="user_inventory">User Inventory:</string>
    <string name="title_activity_testing">Testing Activity</string>
    <string name="title_activity_edit_single_item">Edit Single Item</string>
    <string name="title_activity_user_inventory_with_image">User Inventory With Image</string>
    <string name="title_activity_create_trade">Create Trade</string>
    <string name="friends">Friends</string>
    <string name="add_friend">Add a Friend</string>
    <string name="title_activity_scrolling">Scrolling Activity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_add_friend">Add Friend</string>
    <string name="title_activity_item_profile">Item Profile</string>
    <string name="title_activity_edit_user_profile">Edit User Profile</string>
    <string name="title_activity_user_trades_hub">User Trade Hub</string>
    <string name="your_items">Your Items</string>
    <string name="friends_items">Friend\'s Items</string>
    <string name="offer_trade">Offer Trade</string>
    <string name="reset_selection">Reset Selection</string>
    <string name="start_new_trade">Start New Trade</string>
    <string name="view_pending_trades">View Pending Trades</string>
    <string name="view_completed_trades">View Completed Trades</string>
    <string name="title_activity_pending_trades">Pending Trades</string>
    <string name="title_activity_completed_trades">Completed Trades</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_decline">Decline</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="title_activity_top_traders">Top Traders</string>
    <string name="view_top_traders">View Top Traders</string>

    <string name="title_activity_testing_es">TestingEs</string>

    <string name="or">Or</string>
    <string name="title_activity_single_user_full_inventory">SingleUserFullInventory</string>

</resources>    
