<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context="com.example.qyu4.theallswap.View.UserProfile">

<TextView
    android:id="@+id/new_patient_id_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/user_name"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true" />

<TextView
    android:id="@+id/new_user_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/user_contact_information"
    android:layout_below="@+id/current_user_name"
    android:layout_alignParentStart="true" />

<TextView
    android:id="@+id/new_user_city"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/user_city"
    android:layout_below="@+id/current_user_email"
    android:layout_alignParentStart="true" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/current_user_name"
    android:layout_below="@+id/new_patient_id_label"
    android:layout_alignParentStart="true"
    android:hint="Name" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/current_user_email"
    android:layout_below="@+id/new_user_email"
    android:layout_alignParentStart="true"
    android:hint="A number"
    android:text="@string/email" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:id="@+id/current_user_city"
    android:layout_below="@+id/new_user_city"
    android:layout_alignParentStart="true"
    android:hint="Quality"
    android:text="@string/city" />

    <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Edit Profile"
    android:id="@+id/edit_profile_button"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true" />


</RelativeLayout>
