<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.theallswap.View.EditSingleItem">

    <TextView
        android:id="@+id/new_patient_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/new_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_quantity"
        android:layout_below="@+id/new_user_name"
        android:layout_alignParentStart="true" />


    <TextView
        android:id="@+id/new_user_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_quality"
        android:layout_below="@+id/new_email"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/b_edit_profile_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/new_item_category_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_category"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView3"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_category"
        android:id="@+id/textView3"
        android:layout_below="@+id/new_city"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_privacy"
        android:id="@+id/textView4"
        android:layout_below="@+id/new_item_category_spinner"
        android:layout_alignParentStart="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/b_new_item_private"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/b_new_item_not_private"
            android:checked="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_item_comment"
            android:id="@+id/textView5"
            android:layout_below="@+id/radioGroup"
            android:layout_alignParentStart="true" />

    </RadioGroup>

    <EditText
        android:id="@+id/new_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_patient_id_label"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/new_email" />

    <EditText
        android:id="@+id/new_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_user_city"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/b_edit_profile_submit" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_user_email"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/new_city">
    </EditText>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_item_comment"
        android:layout_below="@+id/radioGroup"
        android:layout_alignEnd="@+id/radioGroup"
        android:layout_toEndOf="@+id/old_item_category"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/old_item_name"
        android:layout_above="@+id/new_user_name"
        android:layout_toEndOf="@+id/new_user_city" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/old_item_quantity"
        android:layout_below="@+id/new_user_name"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/old_item_quality"
        android:layout_above="@+id/new_city"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/old_item_category"
        android:layout_above="@+id/new_item_category_spinner"
        android:layout_alignStart="@+id/old_item_quantity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/old_item_pravicy"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>
