<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.qyu4.theallswap.View.UserLogin" >

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/authentication_required"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/textView1"
    android:layout_marginTop="75dp"
    android:layout_marginLeft="10dp"
    android:text="@string/user_name"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/usernameET"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView2"
    android:layout_marginLeft="35dp"
    android:layout_toRightOf="@+id/textView2"
    android:hint="@string/user_name_hint"
    android:layout_alignParentEnd="true">
    <requestFocus />
</EditText>

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView2"
    android:layout_below="@+id/textView2"
    android:layout_marginTop="40dp"
    android:text="@string/user_password"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/passwordET"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/textView3"
    android:layout_alignLeft="@+id/usernameET"
    android:hint="user_password_hit"
    android:inputType="textPassword"
    android:layout_alignParentEnd="true"
    android:text="@string/user_password_hit" />

<TextView
    android:id="@+id/attemptsLeftTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/textView3"
    android:layout_below="@+id/textView3"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="48dp"
    android:text="Attempts Left:"
    android:visibility="invisible"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Button
    android:id="@+id/loginBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:layout_below="@+id/attemptsLeftTV"
    android:layout_alignStart="@+id/textView1" />

<TextView
    android:id="@+id/numberOfRemainingLoginAttemptsTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/textView1"
    android:layout_alignTop="@+id/attemptsLeftTV"
    android:visibility="invisible" />

<TextView
    android:id="@+id/loginLockedTV"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/loginBtn"
    android:layout_marginTop="35dp"
    android:layout_centerHorizontal="true"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/b_register"
        android:layout_alignBottom="@+id/loginBtn"
        android:layout_alignEnd="@+id/numberOfRemainingLoginAttemptsTV" />

</RelativeLayout>