<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.theallswap.View.UserTradesHub">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_new_trade"
        android:id="@+id/b_start_new_trade"
        android:layout_above="@+id/b_view_pending_trades"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/b_view_pending_trades"
        android:singleLine="true"
        android:text="@string/view_pending_trades"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_completed_trades"
        android:id="@+id/b_view_completed_trades"
        android:layout_below="@+id/b_view_pending_trades"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
