<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.qyu4.theallswap.View.AddInventoryItem">



    <TextView
        android:id="@+id/new_patient_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/new_user_name"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24px"
        android:text="@string/new_item_name" />


    <TextView
        android:id="@+id/new_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_quantity"
        android:layout_below="@+id/new_user_name"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_new_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_user_email"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/text_new_city">
    </EditText>

    <TextView
        android:id="@+id/new_user_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_quality"
        android:layout_below="@+id/text_new_user_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/text_new_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_user_city"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/b_new_user_submit" />

    <Button
        android:id="@+id/b_new_user_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_below="@+id/new_item_category_spinner"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:layout_alignParentEnd="true" />



    <EditText
        android:id="@+id/new_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/new_patient_id_label"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/text_new_user_email" />
    <Spinner
        android:id="@+id/new_item_category_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_category"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textView3"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_item_category"
        android:id="@+id/textView3"
        android:layout_below="@+id/text_new_city"
        android:layout_alignParentStart="true" />

</RelativeLayout>
